Prepared api routes, database, fake data, controller and tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,19 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        links:
+            - mysql
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+        ports:
+            - '8080:80'
+        networks:
+            - sail
 networks:
     sail:
         driver: bridge
